[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z80decomp"
version = "0.9.0"
description = "Z80 ROM disassembler and annotation tool"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
watch = ["watchdog"]

[project.scripts]
z80decomp = "z80decomp.dissasm:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/z80decomp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py", "test_*.py"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
