[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "z80dezasm"
version = "0.9.0"
description = "Z80 ROM disassembler and annotation tool"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
watch = ["watchdog"]

[project.scripts]
z80dezasm = "z80dezasm.dissasm:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/z80dezasm"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["*_tests.py", "test_*.py"]

[tool.pylint.messages_control]
disable = ["missing-module-docstring", "missing-function-docstring", "line-too-long"]

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest>=9.0.2",
]
